# deepseek-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  fix_candidate.py  pyproject.toml  requirements.txt  run_agent.bat  test_agent.py  test_fizzbuzz.py  test_real_ollama.py  test_sample.py  test_tool_agent.py  test_with_mock_ollama.py
src/deepseek_agent/: __init__.py  cli.py  cli_with_tools.py
src/deepseek_agent/model/: __init__.py  client.py
src/deepseek_agent/tools/: __init__.py  file_ops.py  tool_definitions.py  tool_executor.py
src/deepseek_agent/utils/: __init__.py  ollama_service.py
